# installer-intel

./: .gitignore  README.md  pyproject.toml
installer_intel/: banner.py  cli.py
installer_intel/analyzers/: exe.py  msi.py
scripts/: check_version.py
