[project]
name = "installer-intel"
version = "0.1.0"
description = "Installer intelligence CLI that outputs an install plan (silent commands, uninstall, detection rules) from EXE/MSI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.4",
]

[project.scripts]
installer-intel = "installer_intel.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["installer_intel", "installer_intel.analyzers"]
