[project]
name = "installer-intel"
dynamic = ["version"]
description = "Windows-first static installer analysis for endpoint / CPE teams"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["windows", "installer", "packaging", "endpoint", "intune", "sccm", "cpe"]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.4",
]

[project.scripts]
installer-intel = "installer_intel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["installer_intel"]

[tool.hatch.version]
path = "installer_intel/__init__.py"
